@@ -41,7 +41,7 @@ enum TraceProcessorApiVersion {
   // every time a new feature that the UI depends on is being introduced (e.g.
   // new tables, new SQL operators, metrics that are required by the UI).
   // See also TraceProcessorVersion (below).
-  TRACE_PROCESSOR_CURRENT_API_VERSION = 4;
+  TRACE_PROCESSOR_CURRENT_API_VERSION = 5;
 }
 
 // At lowest level, the wire-format of the RPC procol is a linear sequence of
