@@ -2,5 +2,5 @@
 // SHA1(tools/gen_binary_descriptors)
 // c4a38769074f8a8c2ffbf514b267919b5f2d47df
 // SHA1(protos/perfetto/trace_processor/trace_processor.proto)
-// 412428727ee668284c5c420fcc1d22459eced403
+// e4224af460bd63ae0939427911f979605da8dfea
   
