@@ -1,10 +1,11 @@
-Unreleased:
+CHANGELOGUnreleased:
   Tracing service and probes:
     * Android perf profiler ("linux.perf" data source) and Java heap snapshots
       ("android.java_hprof") now support a single wildcard (*) in the config
       options that name process command lines to target.
   Trace Processor:
-    *
+    * Added ABS_TIME_STR function which converts a trace timestamp to
+      an ISO8601 string.
   UI:
     *
   SDK:
